changes in screens done

--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/create-sip/create-sip.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/create-sip/create-sip.component.html
@@ -10,7 +10,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4 align-self-center">
-                                        <label class="font-border">Mobile Number</label>
+                                        <label class="font-border mandatory">Mobile Number</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <input class="form-control" type="text" formControlName="mobileNumber"
@@ -39,7 +39,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4 align-self-center">
-                                        <label class="font-border">Customer ID</label>
+                                        <label class="font-border mandatory">Customer ID</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <input class="form-control" formControlName="customerUniqueId" readonly
@@ -55,7 +55,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4 align-self-center">
-                                        <label class="font-border">Customer Name</label>
+                                        <label class="font-border mandatory">Customer Name</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <input type="text" placeholder="customer name" class="form-control"
@@ -68,7 +68,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4">
-                                        <label class="font-border">Application Date</label>
+                                        <label class="font-border mandatory">Application Date</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <div class="col-12 col-lg-8">
@@ -81,7 +81,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4">
-                                        <label class="font-border">Metal Type</label>
+                                        <label class="font-border mandatory">Metal Type</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <select formControlName="metalType" class="form-control"
@@ -105,7 +105,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4">
-                                        <label class="font-border">SIP Investment Tenure</label>
+                                        <label class="font-border mandatory">SIP Investment Tenure</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <select formControlName="sipInvestmentTenure" class="form-control"
@@ -129,7 +129,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4">
-                                        <label class="font-border">SIP Cycle Date</label>
+                                        <label class="font-border mandatory">SIP Cycle Date</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <select formControlName="sipCycleDate" class="form-control"
@@ -154,7 +154,7 @@
                             <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                 <div class="row">
                                     <div class="col-12 col-lg-4 align-self-center">
-                                        <label class="font-border">Investment Amount</label>
+                                        <label class="font-border mandatory">Investment Amount</label>
                                     </div>
                                     <div class="col-12 col-lg-8">
                                         <input type="text" placeholder="enter invest amount" class="form-control"
@@ -240,7 +240,7 @@
                                 <div class="col-12 col-md-6 p-0 pr-md-3 pr-lg-5 pb-3">
                                     <div class="row">
                                         <div class="col-12 col-lg-4 align-self-center">
-                                            <label class="font-border">Sip Status</label>
+                                            <label class="font-border mandatory">Sip Status</label>
                                         </div>
                                         <div class="col-12 col-lg-8">
                                             <select formControlName="sipStatus" class="form-control"
