--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-list/sip-cycle-date-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-list/sip-cycle-date-list.component.html
@@ -10,7 +10,7 @@
 
                 <ng-container matColumnDef="sipCycleDateStatus">
                     <mat-header-cell *matHeaderCellDef>SIP Cycle DateStatus</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
