--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -621,6 +621,18 @@
                                 <div class="col-6">
                                     <div class="row kt-margin-t-15 ">
                                         <div class="col-4 form-label">
+                                            <label class="text-color my-auto">Remark</label>
+                                        </div>
+                                        <div class="col-8">
+                                            <input type="text" class="form-control" placeholder="Remark"
+                                                formControlName="remark">
+                                        </div>
+                                    </div>
+                                   
+                                </div>
+                                <div class="col-6">
+                                    <div class="row kt-margin-t-15 " *ngIf="ornament.controls.loanAmount.value">
+                                        <div class="col-4 form-label">
                                             <label class="text-color mandatory my-auto">Loan Amount</label>
                                         </div>
                                         <div class="col-8">
@@ -632,17 +644,6 @@
                                                 <span *ngIf="ornament.controls.loanAmount.errors?.required">Field
                                                     Required</span>
                                             </mat-error>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="row kt-margin-t-15 ">
-                                        <div class="col-4 form-label">
-                                            <label class="text-color my-auto">Remark</label>
-                                        </div>
-                                        <div class="col-8">
-                                            <input type="text" class="form-control" placeholder="Remark"
-                                                formControlName="remark">
                                         </div>
                                     </div>
                                 </div>
