--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/permissions/permissions.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/permissions/permissions.component.scss
@@ -1,10 +1,19 @@
 :host {
-    .card-border {
-        border       : 1px solid #c5c6c6;
-        border-radius: 15px;
-        min-height: 100px;
+	.card-border {
+        position: relative;
+		border: 1px solid #c5c6c6;
+		border-radius: 15px;
+		min-height: 100px;
+		// position: relative;
+	}
+	.vertical-center {
+		// margin: 0;
+		position: absolute;
+		top: 50%;
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
     }
-    .line-height{
-        line-height:7.5;
+    .top{
+        top: 0 !important;
     }
 }
