--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-list/sip-cycle-date-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-list/sip-cycle-date-list.component.html
@@ -2,36 +2,26 @@
     <kt-portlet-body>
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
-
                 <ng-container matColumnDef="sipCycleDate">
                     <mat-header-cell *matHeaderCellDef>SIP Cycle Date</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="sipCycleDateStatus">
-                    <mat-header-cell *matHeaderCellDef>SIP Cycle DateStatus</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>SIP Cycle Date Status</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.cycleDateStatus | titlecase}}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <div [ngStyle]="{'display': 'inherit'}"
-                            *ngxPermissionsOnly="['editLeadSource', 'deleteLeadSource']">
-                            <span class="kt-pointer" (click)="editCycleDate(item)"
-                                *ngxPermissionsOnly="['editLeadSource']">Edit</span>
+                        <div [ngStyle]="{'display': 'inherit'}">
+                            <span class="kt-pointer" (click)="editCycleDate(item)">Edit</span>
                             <div class="px-2">|</div>
-                            <span class="kt-pointer text-danger" (click)="deleteCycleDate(item)"
-                                *ngxPermissionsOnly="['deleteLeadSource']">Delete</span>
+                            <span class="kt-pointer text-danger" (click)="deleteCycleDate(item)">Delete</span>
                         </div>
                     </mat-cell>
                 </ng-container>
-
-
-
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-
             </mat-table>
             <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
             <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
