--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -375,7 +375,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
-                                        <label for="">Transaction ID</label>
+                                        <label for="">Mode Of Payment</label>
                                     </div>
                                     <div class="col-6">
                                         <select class="form-control" formControlName="bankTransferType"
@@ -387,7 +387,7 @@
                                         </select>
                                         <mat-error
                                             *ngIf="disbursalForm.controls.bankTransferType.touched && disbursalForm.controls.bankTransferType.errors?.required">
-                                            Required field
+                                            Field Required
                                         </mat-error>
                                     </div>
                                 </div>
