--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -92,7 +92,7 @@
                     <div class="text-gray font-weight-500 kt-padding-b-5">Interest Rate After Rebate</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
                         <div>
-                            {{details?.customerLoan[0]?.interestRate}}%
+                            {{details?.customerLoan[0]?.currentInterestRate}}%
                             P.M
                         </div>
                         <div *ngIf="details?.customerLoan[1]?.currentInterestRate">
