--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -27,7 +27,7 @@
                         {{loan?.customer?.internalBranch?.name | titlecase}}
                     </mat-cell>
                 </ng-container>
-                
+
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
                     <mat-cell *matCellDef="let loan" class="d-block">
@@ -64,7 +64,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="interestRate">
-                    <mat-header-cell *matHeaderCellDef>Intrest Rate</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Interest Rate</mat-header-cell>
                     <mat-cell *matCellDef="let loan" class="d-block">
                         <div>
                             {{loan?.customerLoan[0]?.interestRate}} % P.M
