--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests-edit/deposit-requests-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests-edit/deposit-requests-edit.component.html
@@ -49,9 +49,8 @@
                             <label class="font-weight-500 text-color">Deposit Amount</label>
                         </div>
                         <div class="col-8">
-                            <textarea type="text" formControlName="depositAmount" class="form-control" id="autoresizing"
+                            <input type="text" formControlName="depositAmount" class="form-control" id="autoresizing"
                                 disabled>
-                            </textarea>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
@@ -73,7 +72,7 @@
                         </div>
                     </div>
                    
-                    <div class="row kt-margin-t-15">
+                    <div *ngIf="depositInfo.transactionData.depositStatus == 'pending'" class="row kt-margin-t-15">
                         <div class="col-12 text-right">
                             <kt-button [value]="'Update'" [type]="'submit'" (click)="submit()"></kt-button>
                         </div>
