--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests/deposit-requests.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests/deposit-requests.component.html
@@ -112,8 +112,10 @@
                 <ng-container matColumnDef="depositStatus">
                     <mat-header-cell *matHeaderCellDef class="align-right">Deposit Status
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.depositStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let element" [ngClass]="{'text-orange' : element?.depositStatus == 'pending',
+                    'text-red' : element?.depositStatus == 'rejected',
+                    'text-green' : element?.depositStatus == 'completed'}" class="align-right">
+                        {{element?.depositStatus | titlecase}}</mat-cell>
                 </ng-container>
                
                 <ng-container matColumnDef="action">
