--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
@@ -49,23 +49,23 @@
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.orderBy?.broker?.store?.storeUniqueId ? element?.order?.orderBy?.broker?.store?.storeUniqueId : '-'}}
+                        {{element?.customerId}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerFullName">
                     <mat-header-cell *matHeaderCellDef>Customer Full Name</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.orderBy?.broker?.merchant?.merchantName ? element?.order?.orderBy?.broker?.merchant?.merchantName : '-'}}
+                        {{element?.customer?.firstName || element?.customer?.lastName ? (element?.customer?.firstName + ' ' + element?.customer?.lastName | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.orderUniqueId ? element?.order?.orderUniqueId : '-'}}</mat-cell>
+                        {{element?.customer?.mobileNumber}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalTransactionID">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.transactionId ? element?.transactionId : '-'}}
+                    <mat-cell *matCellDef="let element">{{element?.transactionUniqueId}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalInitiatedDate">
@@ -73,70 +73,71 @@
                     <mat-cell *matCellDef="let element">
                         <div class="d-block">
                             <div>
-                                {{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'MMM d, y') : '-'}}
+                                {{element?.createdAt}}
                             </div>
-                            <!-- <div>{{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'h:mm a') : ''}}
-                            </div> -->
+                           
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalAmount">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Amount </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.product?.productName ? element?.order?.product?.productName : '-'}}</mat-cell>
+                        {{element?.transactionAmont}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bankName">
                     <mat-header-cell *matHeaderCellDef class="align-right">Bank Name </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.order?.weight ? element?.order?.weight : '-'}}</mat-cell>
+                        {{element?.bankName}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="branchName">
                     <mat-header-cell *matHeaderCellDef>Branch Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.product?.sku ? element?.order?.product?.sku : '-'}}</mat-cell>
+                        {{element?.branchName}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="accountNumber">
                     <mat-header-cell *matHeaderCellDef class="align-right">Account Number 
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.order?.orderdetails[0]?.finalOrderPrice ? element?.order?.orderdetails[0]?.finalOrderPrice : '-'}}
+                        {{element?.accountNumber}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="accountHolderName">
                     <mat-header-cell *matHeaderCellDef class="align-right">Account Holder Name
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.order?.orderdetails[0]?.initialPayment ? element?.order?.orderdetails[0]?.initialPayment : '-'}}
+                        {{element?.accountHolderName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ifscCode">
                     <mat-header-cell *matHeaderCellDef class="align-right">IFSC Code
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
+                        {{element?.ifscCode}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalPaymentDate">
                     <mat-header-cell *matHeaderCellDef>Withdrawal  Payment Date</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.customerDetails?.customerUniqueId ? element?.order?.customerDetails?.customerUniqueId : '-'}}
-                    </mat-cell>
+                        
+                    </mat-cell>{{element?.depositDate ? element?.depositDate : '-'}}
                 </ng-container>
                 <ng-container matColumnDef="bankTransactionID">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.customerDetails?.firstName || element?.order?.customerDetails?.lastName ? (element?.order?.customerDetails?.firstName + ' ' + element?.order?.customerDetails?.lastName | titlecase) : '-'}}
+                        {{element?.bankTransactionUniqueId ? element?.bankTransactionUniqueId : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositmodeofpayment">
                     <mat-header-cell *matHeaderCellDef>Deposit mode of payment </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.order?.customerDetails?.customeraddress[0]?.address ? element?.order?.customerDetails?.customeraddress[0]?.address : '-'}}
+                        {{element?.paymentType ? element?.paymentType : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalStatus">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Status</mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element?.order?.customerDetails?.customeraddress[0]?.state?.name ? element?.order?.customerDetails?.customeraddress[0]?.state?.name : '-'}}
+                    <mat-cell *matCellDef="let element" [ngClass]="{'text-orange' : element?.depositStatus == 'pending',
+                    'text-red' : element?.depositStatus == 'rejected',
+                    'text-green' : element?.depositStatus == 'completed'}" >
+                        {{element?.depositStatus | titlecase}}
                     </mat-cell>
                 </ng-container>
 
@@ -145,7 +146,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div *ngxPermissionsOnly="['orderEdit']" (click)="editOrder(element)" class="kt-pointer">
+                            <div *ngxPermissionsOnly="['orderEdit']" (click)="editWithdrawal(element.id)" class="kt-pointer">
                                 Edit</div>
                         </div>
                     </mat-cell>
