kyc-fe::user details mobile fixed

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -30,7 +30,7 @@
 
 						<div class="col-8">
 							<!-- <mat-form-field appearance="outline" class="w-100"> -->
-							<input class="form-control" type="text" formControlName="mobileNumber" numbersOnly
+							<input class="form-control" readonly type="text" formControlName="mobileNumber" numbersOnly
 								autocomplete="off" placeholder="Enter mobile number" margin [class.isError]="
 											controls.mobileNumber.touched &&
 											controls.mobileNumber.invalid
