--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
@@ -12,19 +12,18 @@
                             <select formControlName="cycleDate" class="form-control"
                                 [class.isError]="SipCycleDateForm.controls.cycleDate.touched && SipCycleDateForm.controls.cycleDate.invalid">
                                 <option value="">Select Date</option>
-                                <option *ngFor="let date of cycleDate" [value]="date?.cycleDate">
-                            {{date?.cycleDate}}
-                        </option>
+                                <option *ngFor="let date of cycleDateList" [value]="date?.cycleDate">
+                                    {{date?.cycleDate}}
+                                </option>
                             </select>
-                            <!-- <div
-                        *ngIf="newSipForm.controls.bankId.touched && newSipForm.controls.bankId.invalid">
-                        <mat-error *ngIf="newSipForm.controls.bankId.errors?.required">
-                            Required field
-                        </mat-error>
-                    </div> -->
+                            <div
+                                *ngIf="SipCycleDateForm.controls.cycleDate.touched && SipCycleDateForm.controls.cycleDate.invalid">
+                                <mat-error *ngIf="SipCycleDateForm.controls.cycleDate.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
                     </div>
-
                     <div class="row justify-content-center kt-margin-t-10">
                         <div class="col-5 form-label">
                             <label class="kt-padding-l-10 mandatory">SIP Cycle Date Status</label>
@@ -34,15 +33,15 @@
                                 [class.isError]="SipCycleDateForm.controls.cycleDateStatus.touched && SipCycleDateForm.controls.cycleDateStatus.invalid">
                                 <option value="">Select Status Type</option>
                                 <option *ngFor="let status of statusList" [value]="status.value">
-                            {{status?.name}}
-                        </option>
+                                    {{status?.name}}
+                                </option>
                             </select>
-                            <!-- <div
-                        *ngIf="newSipForm.controls.bankId.touched && newSipForm.controls.bankId.invalid">
-                        <mat-error *ngIf="newSipForm.controls.bankId.errors?.required">
-                            Required field
-                        </mat-error>
-                    </div> -->
+                            <div
+                                *ngIf="SipCycleDateForm.controls.cycleDateStatus.touched && SipCycleDateForm.controls.cycleDateStatus.invalid">
+                                <mat-error *ngIf="SipCycleDateForm.controls.cycleDateStatus.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
                     </div>
                 </div>
